--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
+    "react-router-dom": "^4.1.1",
     "redux": "^3.5.2",
     "uuid": "^3.0.1"
   },
