--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^4.1.1",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
