--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-stage-0": "^6.24.1",
     "lodash": "^4.17.4",
+    "normalizr": "^3.2.3",
     "prop-types": "^15.5.10",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
